Partial block property implementation